--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,15 @@ version = "0.9.0"
 base64 = "0.22"
 bincode = "1.3"
 itertools = "0.13"
+once_cell = "1.21.1"
 reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 solana-sdk = "2"
 thiserror = "2"
 tokio = "1"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
 
 [dev-dependencies]
 tokio = {version = "1", features = ["full"]}
